Name:             hsc3
Version:          0.1
License:          GPL
Copyright:        Rohan Drape, 2006-2007
Author:           Rohan Drape
Maintainer:       rd@slavepianos.org
Stability:        Experimental
Homepage:         http://slavepianos.org/rd/f/207949/
Synopsis:         Haskell SuperCollider
Description:      Haskell client for the SuperCollider synthesis server
Category:         Sound
Tested-With:      GHC
Build-Depends:    base, binary, bytestring, hosc, network, random
GHC-Options:      -Wall -fno-warn-orphans -O2
Exposed-modules:  Sound.SC3
                  Sound.SC3.UGen
                  Sound.SC3.UGen.Analysis
                  Sound.SC3.UGen.Buffer
                  Sound.SC3.UGen.Chaos
                  Sound.SC3.UGen.Demand
                  Sound.SC3.UGen.Demand.Base
                  Sound.SC3.UGen.Demand.Monadic
                  Sound.SC3.UGen.Envelope
                  Sound.SC3.UGen.Envelope.Construct
                  Sound.SC3.UGen.Enum
                  Sound.SC3.UGen.FFT
                  Sound.SC3.UGen.FFT.Base
                  Sound.SC3.UGen.FFT.Monadic
                  Sound.SC3.UGen.Filter
                  Sound.SC3.UGen.Graph
                  Sound.SC3.UGen.Granular
                  Sound.SC3.UGen.Information
                  Sound.SC3.UGen.IO
		  Sound.SC3.UGen.MachineListening
                  Sound.SC3.UGen.Math
                  Sound.SC3.UGen.Mix
                  Sound.SC3.UGen.Noise.Base
                  Sound.SC3.UGen.Noise.Monadic
                  Sound.SC3.UGen.Operator
                  Sound.SC3.UGen.Oscillator
                  Sound.SC3.UGen.Panner
                  Sound.SC3.UGen.Rate
                  Sound.SC3.UGen.UGen
                  Sound.SC3.UGen.UGen.Construct
                  Sound.SC3.UGen.UGen.Math
                  Sound.SC3.UGen.UGen.MCE
                  Sound.SC3.UGen.UGen.Predicate
                  Sound.SC3.UGen.UId
                  Sound.SC3.Server
                  Sound.SC3.Server.Command
                  Sound.SC3.Server.Graphdef
                  Sound.SC3.Server.Play
                  Sound.SC3.Server.Status
                  Sound.SC3.Server.NRT
Other-modules:
                  Sound.SC3.Server.Utilities
                  Sound.SC3.UGen.Utilities
