Name:              hsc3
Version:           0.15
Synopsis:          Haskell SuperCollider
Description:       Haskell client for the SuperCollider synthesis server,
                   <http://audiosynth.com/>.
                   .
                   For installation and configuration see the Tutorial at
                   <http://rd.slavepianos.org/?t=hsc3-texts>.
                   .
                   hsc3 has two implementations of the non-determinstic
                   Unit Generators, "Sound.SC3.UGen.ID" and
                   "Sound.SC3.UGen.Monad".
License:           GPL
Category:          Sound
Copyright:         (c) Rohan Drape and others, 2006-2013
Author:            Rohan Drape
Maintainer:        rd@slavepianos.org
Stability:         Experimental
Homepage:          http://rd.slavepianos.org/?t=hsc3
Tested-With:       GHC == 7.6.1
Build-Type:        Simple
Cabal-Version:     >= 1.8

Data-files:        README
                   emacs/hsc3.el
                   Help/Server/*.help.*hs
                   Help/UGen/Analysis/*.help.*hs
                   Help/UGen/Buffer/*.help.*hs
                   Help/UGen/Chaos/*.help.*hs
                   Help/UGen/Control/*.help.*hs
                   Help/UGen/Demand/*.help.*hs
                   Help/UGen/DiskIO/*.help.*hs
                   Help/UGen/Envelope/*.help.*hs
                   Help/UGen/External/*.help.*hs
                   Help/UGen/FFT/*.help.*hs
                   Help/UGen/Filter/*.help.*hs
                   Help/UGen/Granular/*.help.*hs
                   Help/UGen/Information/*.help.*hs
                   Help/UGen/IO/*.help.*hs
                   Help/UGen/MachineListening/*.help.*hs
                   Help/UGen/Math/*.help.*hs
                   Help/UGen/Noise/*.help.*hs
                   Help/UGen/Oscillator/*.help.*hs
                   Help/UGen/Panner/*.help.*hs
                   Help/UGen/Trigger/*.help.*hs
                   Help/UGen/Wavelets/*.help.*hs

Library
  Build-Depends:   base == 4.*,
                   binary,
                   bytestring,
                   containers,
                   data-default,
                   directory,
                   filepath,
                   hosc == 0.15.*,
                   murmur-hash,
                   network,
                   process,
                   random,
                   split >= 0.2,
                   transformers
  GHC-Options:     -Wall -fwarn-tabs
  Exposed-modules: Sound.SC3
                   Sound.SC3.FD
                   Sound.SC3.ID
                   Sound.SC3.ID.FD
                   Sound.SC3.Monad
                   Sound.SC3.Monad.FD
                   Sound.SC3.Monad.Syntax
                   Sound.SC3.Server
                   Sound.SC3.Server.Command.Completion
                   Sound.SC3.Server.Command.Core
                   Sound.SC3.Server.Command.Double
                   Sound.SC3.Server.Command.Float
                   Sound.SC3.Server.Command.Int
                   Sound.SC3.Server.Command.Generic
                   Sound.SC3.Server.Enum
                   Sound.SC3.Server.FD
                   Sound.SC3.Server.Help
                   Sound.SC3.Server.Monad
                   Sound.SC3.Server.NRT
                   Sound.SC3.Server.Transport.FD
                   Sound.SC3.Server.Transport.Monad
                   Sound.SC3.Server.Status
                   Sound.SC3.Server.Synthdef
                   Sound.SC3.Server.Synthdef.Internal
                   Sound.SC3.Server.Synthdef.Reconstruct
                   Sound.SC3.Server.Synthdef.Transform
                   Sound.SC3.Server.Synthdef.Type
                   Sound.SC3.UGen
                   Sound.SC3.UGen.Analysis
                   Sound.SC3.UGen.Buffer
                   Sound.SC3.UGen.Chaos
                   Sound.SC3.UGen.Composite
                   Sound.SC3.UGen.Composite.ID
                   Sound.SC3.UGen.Composite.Monad
                   Sound.SC3.UGen.Demand
                   Sound.SC3.UGen.Demand.ID
                   Sound.SC3.UGen.Demand.Monad
                   Sound.SC3.UGen.DiskIO
                   Sound.SC3.UGen.Enum
                   Sound.SC3.UGen.Envelope
                   Sound.SC3.UGen.Envelope.Construct
                   Sound.SC3.UGen.Envelope.Interpolate
                   Sound.SC3.UGen.External
                   Sound.SC3.UGen.External.ATS
                   Sound.SC3.UGen.External.ID
                   Sound.SC3.UGen.External.LPC
                   Sound.SC3.UGen.External.SC3_Plugins
                   Sound.SC3.UGen.External.Zita
                   Sound.SC3.UGen.FFT
                   Sound.SC3.UGen.FFT.ID
                   Sound.SC3.UGen.FFT.Monad
                   Sound.SC3.UGen.Filter
                   Sound.SC3.UGen.Graph
                   Sound.SC3.UGen.Granular
                   Sound.SC3.UGen.Help
                   Sound.SC3.UGen.Identifier
                   Sound.SC3.UGen.ID
                   Sound.SC3.UGen.IO
                   Sound.SC3.UGen.Information
                   Sound.SC3.UGen.MachineListening
                   Sound.SC3.UGen.Math
                   Sound.SC3.UGen.MCE
                   Sound.SC3.UGen.Monad
                   Sound.SC3.UGen.Name
                   Sound.SC3.UGen.Noise.ID
                   Sound.SC3.UGen.Noise.Monad
                   Sound.SC3.UGen.Operator
                   Sound.SC3.UGen.Oscillator
                   Sound.SC3.UGen.Panner
                   Sound.SC3.UGen.Plain
                   Sound.SC3.UGen.Protect
                   Sound.SC3.UGen.Rate
                   Sound.SC3.UGen.Type
                   Sound.SC3.UGen.UGen
                   Sound.SC3.UGen.UId
                   Sound.SC3.UGen.Wavelets
  Other-modules:   Sound.SC3.Internal

Source-Repository  head
  Type:            darcs
  Location:        http://rd.slavepianos.org/sw/hsc3/
