cabal-version: 2.4
name: hsc3-repl
version: 0
library
 default-language: Haskell2010
 build-depends:
  array,
  base,
  binary,
  bitwise,
  bytestring,
  colour,
  containers,
  data-binary-ieee754,
  data-ordlist,
  directory,
  filepath,
  graphviz,
  mtl,
  murmur-hash,
  network,
  parsec,
  process,
  random,
  safe,
  split,
  strict,
  text,
  time,
  transformers,
  unordered-containers,
  vector,
  xml,
  hosc,
  hsc3,
  html-minus,
  hosc-util,
  hsc3-db,
  hsc3-dot,
  hsc3-lang,
  hsc3-plot,
  hsc3-sf,
  hsc3-sf-hsndfile,
  hsc3-ui,
  sc3-rdu,
  hcg-minus,
  hcg-minus-cairo,
  hps,
  after-pim,
  hmeap,
  hmt-base,
  hmt,
  hosc-json,
  hsc3-auditor,
  hsc3-cairo,
  hsc3-data,
  hsc3-m,
  hsc3-rec,
  hsc3-rw,
  hsc3-unsafe,
  hsdif,
  hsharc,
  hspear,
  midi-osc,
  rju,
  tctl,
  --hsc3-forth,
  hsc3-lisp,
  hdf,
  hls,
  hly,
  hmt-diagrams,
  hps-cairo,
  hts,
  --img-osc,
  www-minus
